--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <link href="./style.css" rel="stylesheet">
+    <link href="./styles/style.css" rel="stylesheet">
     <title>Conversor de Moedas</title>
 </head>
 
@@ -42,7 +42,7 @@
     </div>
 
 
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
